--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,58 @@
-ConfigParser==5.2.0
-Cython==0.29.28
+apispec==5.1.1
+asgiref==3.5.0
+atheris==2.0.10
+Babel==2.10.1
+blinker==1.4
+brotli==1.0.9
+brotlicffi==1.0.9.2
+cElementTree==1.0.2-20050302
+configparser==5.2.0
+coverage==6.3.2
+cryptography==37.0.0
 dl==0.1.0
-docutils==0.18.1
-flasgger==0.9.5
-Flask==2.1.1
-importlib_metadata==4.11.3
-simplejson==3.17.6
-toml==0.10.2
-tornado==6.1
-WTForms==3.0.1
+elementtree==1.2.6-20050316
+email_validator==1.2.0
+eventlet==0.33.0
+flask_restful==0.3.9
+fqdn==1.5.1
+gevent==21.12.0
+greenlet==1.1.2
+HTMLParser==0.0.2
+hypothesis==6.45.0
+Image==1.5.33
+importlib_resources==5.7.1
+inotify==0.2.10
+ipython==8.2.0
+isoduration==20.11.0
+jsonpointer==2.3
+keyring==23.5.0
+lockfile==0.12.2
+lxml==4.8.0
+marshmallow==3.15.0
+mock==4.0.3
+ordereddict==1.1
+Parser==0.1
+PasteScript==3.2.1
+Pillow==9.1.0
+protobuf==3.20.1
+pycares==4.1.2
+pycurl==7.45.1
+Pygments==2.12.0
+pyOpenSSL==22.0.0
+pyperf==2.3.1
+pyrsistent==0.18.1
+python-dotenv==0.20.0
+pythran==0.11.0
+recommonmark==0.7.1
+rfc3339_validator==0.1.4
+rfc3986_validator==0.1.1
+rfc3987==1.3.8
+setproctitle==1.2.3
+sets==0.3.2
+Sphinx==4.5.0
+typing_extensions==4.2.0
+unicodedata2==14.0.0
+uri_template==1.2.0
+watchdog==2.1.7
+webcolors==1.11.1
+xmlrpclib==1.0.1
